[gd_scene load_steps=5 format=3 uid="uid://cedf6tvshh6qt"]

[ext_resource type="Texture2D" uid="uid://bmd3xqc3bmonv" path="res://moneda.png" id="1_mx0dt"]
[ext_resource type="Script" uid="uid://dmsjkgjhpx2xm" path="res://moneda_explota.gd" id="1_ta33o"]
[ext_resource type="AudioStream" uid="uid://dv80pyjimv4lq" path="res://coin-recieved-230517.mp3" id="4_a0kxe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4dq7"]
size = Vector2(304.5, 266)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ta33o")

[node name="so" type="AudioStreamPlayer2D" parent="."]
position = Vector2(593, 288)
stream = ExtResource("4_a0kxe")

[node name="MonedaArea" type="Area2D" parent="."]

[node name="Moneda" type="Sprite2D" parent="MonedaArea"]
position = Vector2(591, 288)
texture = ExtResource("1_mx0dt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonedaArea"]
position = Vector2(586.25, 291)
shape = SubResource("RectangleShape2D_i4dq7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 388.0
offset_top = 487.0
offset_right = 797.0
offset_bottom = 569.0
text = "Prem aquí per començar i tot seguit prem la moneda"

[connection signal="input_event" from="MonedaArea" to="." method="_on_moneda_area_input_event"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button" to="MonedaArea/Moneda" method="_on_button_pressed"]
